# ocpy12_securised_archi

./: .gitignore  README.md  justfile  mockup.txt  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build_docker.yml  lint.yml
crm_epic_events/: __init__.py  __main__.py  config.py  main.py
crm_epic_events/controllers/: __init__.py  base.py  company.py  contract.py  customer.py  event.py  main.py  user.py
crm_epic_events/errors/: __init__.py  authentication_errors.py  company_errors.py  contract_errors.py  permissions_errors.py  user_errors.py
crm_epic_events/models/: __init__.py  company.py  contract.py  customer.py  database.py  event.py  user.py
crm_epic_events/models/start_tasks/: __init__.py  create_test_user.py  setup.py
crm_epic_events/permissions/: __init__.py  ownership_permissions.py  permissions_list.py  roles_permissions.py
crm_epic_events/repositories/: user.py
crm_epic_events/services/: __init__.py
crm_epic_events/services/authentication/: schemas.py  service.py
crm_epic_events/services/company/: schemas.py  service.py
crm_epic_events/utils/: __init__.py  check_choice.py  config.py  constants.py  countdown.py  db_transaction.py  exit_app.py  printers.py
crm_epic_events/views/: __init__.py  company.py  contract.py  customer.py  event.py  login.py  main.py  user.py
docker/: Dockerfile  Dockerfile.dockerignore  compose.local.yml  entrypoint.sh
gitignore/: class_diagram.drawio  mockup.txt  spec.txt
migrations/: env.py
migrations/versions/: 02eaa790c45b_convert_float_type_column_in_contract_.py  648a94b078f5_initial_migration.py  fa48f31b636e_delete_useless_password_column_in_.py
tests/: conftest.py  factories.py
tests/auth/: test_service.py
tests/company/: test_service.py
tests/contract/: test_service.py
tests/controllers/: test_company.py  test_contract.py  test_customer.py  test_event.py  test_user.py
tests/customer/: test_service.py
tests/fixtures/: auth.py  company.py  contract.py  customer.py  event.py  user.py
tests/permissions/: fake_controller.py  test_ownership.py  test_permissions.py
tests/services/: test_auth.py  test_company.py  test_contract.py  test_customer.py  test_event.py  test_user.py
tests/user/: test_service.py
(+8 files in other folders)
