[project.scripts]
crm = "crm_epic_events.__main__:main"
#===========================
[tool.uv]
package = true
[tool.setuptools.packages.find]
include = ["crm_epic_events*"]
#===========================
[project]
name = "crm_epc_events"
version = "0.1.0"
description = "CLI CRM"
authors = [
    { name = "Arnaud Goguelin", email = "arnaud.goguelin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "SQLAlchemy ~= 2.0.50",
    "alembic ~= 1.18.4",
    "pydantic ~= 2.13.4",
    "python-dotenv ~= 1.2.2",
    "psycopg ~= 3.3.4",
    "psycopg[binary,pool] ~= 3.3.4",
    "colorama~=0.4.6",
    "python-dotenv~=1.2.2",
    "pyjwt~=2.13.0",
    "bcrypt~=5.0.0"
]
readme = "README.md"
#===========================
[dependency-groups]
dev = [
    "ruff ~= 0.15.15",
    "faker>=40.23.0",
    "factory-boy~=3.3.3",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0"
]
#===========================
[tool.ruff]
line-length = 120
target-version = "py312"
include = ["*.py", "*.pyi"]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    ".envTemplate",
    "_build",
    "buck-out",
    "build",
    "dist",
    "compose.yml",
    "Dockerfile",
    ".gitignore",
    "__pycache__",
    "old",
    "__init__.py",
    "*.pyc",
    "./migrations/",
    "*/settings/*"
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "Q",      # flake8-quotes
]

ignore = []

[tool.ruff.format]
line-ending = "auto"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-between-types = 1
lines-after-imports = 2

#===========================
[tool.pytest.ini_options]
testpaths = ["tests"]
